# neobank-assistant

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
src/: __init__.py
src/neobank_assistant/cli/: main.py
src/neobank_assistant/core/: __init__.py  config.py  exceptions.py
